<resources>
    <string name="app_name">samolet</string>

    <!-- Bottom Navigation -->
    <string name="profile">Профиль</string>

    <!-- Camera Fragment -->
    <string name="scan_floor">Записать видео</string>
    <string name="load_video">Загрузить видео</string>
    <string name="table">Таблица</string>
    <string name="or">ИЛИ</string>
    <string name="write_floor">Введите этаж</string>
    <string name="counting_of_floors">Количество этажей: %s</string>
    <string name="counting_of_flats">Количество квартир: %s</string>
    <string name="about_table">Результаты отобразятся в скор-таблице через некоторое время. Для перехода на неё нажмите на кнопку ниже.</string>

    <!-- Auth Fragment -->
    <string name="sing_in">Вход</string>
    <string name="sing_up">Регистрация</string>
    <string name="login_hint">Логин</string>
    <string name="password_hint">Пароль</string>
    <string name="button_sing_in">Войти</string>
    <string name="button_sing_up">Зарегистрироваться</string>
    <string name="fio_hint">ФИО</string>
    <string name="email_hint">Почта</string>
    <string name="repeat_password_hint">Повторитe пароль</string>

    <string name="register_success">Успешно!</string>
    <string name="login_error">Неверный логин или пароль</string>

    <!-- Main Page Fragment -->
    <string name="my_tasks">Мои задачи</string>
    <string name="count_of_objects_with_date">Количество объектов за %s</string>
    <string name="counting_with">%s шт</string>
    <string name="choose_date">Пожалуйста, выберите дату</string>

    <!-- Item Date -->
    <string name="today">Сегодня</string>
    <string name="tomorrow">Завтра</string>

    <!-- Item Object -->
    <string name="address">Адрес:</string>
    <string name="passed_sections">Пройдено секций:</string>
    <string name="counting_sections">%s из %s</string>
    <string name="address_constructor">ул. %s, дом %s</string>
    <string name="building_num">дом %s</string>

    <!-- Building Fragment -->
    <string name="tasks_of_building">Задачи дома</string>
    <string name="progress_sections">Прогресс по выполнению секций</string>
    <string name="address_without_dots">Адрес</string>
    <string name="sections">Секции</string>

    <!-- Item Floor -->
    <string name="floor_num">Этаж %s</string>
    <string name="list_flats">Список квартир</string>

    <!-- Flat Fragment -->
    <string name="finishing_flat_num">Отделка квартиры %s</string>
    <string name="clean_r">Чистовая отделка</string>
    <string name="rough_r">Черновая отделка</string>
    <string name="other">Остальное</string>

</resources>