<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.auth.AuthFragment">

    <ImageView
        android:layout_marginTop="60dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo" />

    <ImageView
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo_word" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="40dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/fragment_auth_tv_button_sing_in"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/sing_in"
            android:layout_weight="1"

            android:layout_marginEnd="18dp"

            android:textSize="24sp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/samolet_blue" />

        <TextView
            android:id="@+id/fragment_auth_tv_button_sing_up"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="18dp"

            android:text="@string/sing_up"
            android:layout_weight="1"

            android:textSize="24sp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/samolet_grey" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_auth_cl_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center">
        
        <ImageView
            android:id="@+id/fragment_auth_iv_login"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_login_unselected"
            
            android:layout_marginBottom="10dp"
            android:layout_marginStart="5dp"
            
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <EditText
            android:id="@+id/fragment_auth_et_login"

            android:backgroundTint="@color/samolet_grey"

            android:layout_width="250dp"

            android:layout_height="40dp"
            android:ellipsize="start"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/login_hint"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="40dp"
            android:paddingEnd="10dp"
            android:textColor="@color/samolet_blue"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_auth_cl_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/fragment_auth_iv_password"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_password_unselected"

            android:layout_marginBottom="10dp"
            android:layout_marginStart="5dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <EditText
            android:id="@+id/fragment_auth_et_password"

            android:backgroundTint="@color/samolet_grey"

            android:layout_width="250dp"
            android:layout_height="40dp"

            android:layout_gravity="center"
            android:textColor="@color/samolet_blue"
            android:inputType="textPassword"
            android:maxLines="1"
            android:ellipsize="start"
            android:paddingStart="40dp"
            android:paddingEnd="10dp"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/password_hint"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


        <EditText
            android:id="@+id/fragment_auth_et_fio"

            android:backgroundTint="@color/samolet_grey"

            android:layout_height="40dp"

            android:layout_width="250dp"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:textColor="@color/samolet_blue"
            android:inputType="text"
            android:maxLines="1"
            android:ellipsize="start"
            android:paddingHorizontal="10dp"
            android:hint="@string/fio_hint"
            android:fontFamily="@font/roboto_regular" />

    <EditText
        android:id="@+id/fragment_auth_et_reg_login"

        android:backgroundTint="@color/samolet_grey"

        android:layout_height="40dp"

        android:layout_width="250dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="@color/samolet_blue"
        android:inputType="text"
        android:maxLines="1"
        android:ellipsize="start"
        android:paddingHorizontal="10dp"
        android:hint="@string/login_hint"
        android:fontFamily="@font/roboto_regular" />

        <EditText
            android:id="@+id/fragment_auth_et_email"

            android:backgroundTint="@color/samolet_grey"

            android:layout_height="40dp"

            android:layout_width="250dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:textColor="@color/samolet_blue"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:ellipsize="start"
            android:paddingHorizontal="10dp"
            android:hint="@string/email_hint"
            android:fontFamily="@font/roboto_regular" />

        <EditText
            android:id="@+id/fragment_auth_et_reg_password"

            android:backgroundTint="@color/samolet_grey"

            android:layout_height="40dp"

            android:layout_width="250dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:textColor="@color/samolet_blue"
            android:inputType="textPassword"
            android:maxLines="1"
            android:ellipsize="start"
            android:paddingHorizontal="10dp"
            android:hint="@string/password_hint"
            android:fontFamily="@font/roboto_regular"/>



        <EditText
            android:id="@+id/fragment_auth_et_repeat_password"

            android:backgroundTint="@color/samolet_grey"

            android:layout_height="40dp"

            android:layout_width="250dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:textColor="@color/samolet_blue"
            android:inputType="textPassword"
            android:maxLines="1"
            android:ellipsize="start"
            android:paddingHorizontal="10dp"
            android:hint="@string/repeat_password_hint"
            android:fontFamily="@font/roboto_regular"/>


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        app:cardCornerRadius="10dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fragment_auth_button_sing_in"

            android:layout_width="220dp"
            android:layout_height="40dp"

            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/button_sing_in"

            android:background="@color/samolet_blue" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        app:cardCornerRadius="10dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fragment_auth_button_sing_up"
            android:layout_width="220dp"
            android:layout_height="40dp"

            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/button_sing_up"

            android:background="@color/samolet_blue" />

    </androidx.cardview.widget.CardView>

</LinearLayout>