<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_background"
    tools:context=".screens.mainpage.MainPageFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textColor="@color/samolet_primary"
            android:text="@string/my_tasks"
            android:textSize="24sp"
            android:fontFamily="@font/roboto_medium"

            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"

            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:id="@+id/fragment_main_page_iv_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:src="@drawable/ic_map"

            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"

            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_main_page_rv_dates"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:paddingEnd="20dp"
        android:clipToPadding="false"

        android:layout_marginTop="5dp" />

    <RelativeLayout
        android:id="@+id/fragment_main_page_rl_counting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/fragment_main_page_tv_date_objects"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/count_of_objects_with_date"
            android:textColor="@color/samolet_grey"
            android:textSize="14sp"
            android:fontFamily="@font/roboto_regular" />

        <TextView
            android:visibility="gone"

            android:id="@+id/fragment_main_page_tv_count_objects"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/counting_with"
            android:textColor="@color/samolet_grey"
            android:textSize="14sp"
            android:fontFamily="@font/roboto_regular"

            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/fragment_main_page_pb_counting"

        android:layout_width="match_parent"
        android:layout_height="8dp"

        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"

        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:progressDrawable="@drawable/progress_bar_for_main_page_counting" />

    <androidx.recyclerview.widget.RecyclerView
        android:visibility="gone"

        android:id="@+id/fragment_main_page_rv_objects"

        android:layout_marginTop="20dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/fragment_main_page_tv_choose_date"

        android:layout_width="wrap_content"
        android:layout_height="match_parent"

        android:gravity="center"

        android:text="@string/choose_date"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/samolet_grey"
        android:textSize="18sp"
        android:layout_gravity="center"/>



</LinearLayout>