<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.flat.FlatFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/fragment_flat_iv_arrow_back"

            android:layout_width="20dp"
            android:layout_height="40dp"

            android:layout_marginStart="20dp"
            android:layout_marginBottom="5dp"

            android:src="@drawable/ic_arrow_back"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/finishing_flat_num"

            android:textColor="@color/samolet_primary"
            android:textSize="24sp"
            android:fontFamily="@font/roboto_medium"

            android:layout_marginStart="20dp"

            app:layout_constraintBottom_toBottomOf="@id/fragment_flat_iv_arrow_back"
            app:layout_constraintTop_toTopOf="@id/fragment_flat_iv_arrow_back"
            app:layout_constraintStart_toEndOf="@id/fragment_flat_iv_arrow_back" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"

                android:textSize="18sp"
                android:textColor="@color/samolet_grey"
                android:fontFamily="@font/roboto_medium"


                android:text="@string/address_without_dots"/>

            <TextView
                android:id="@+id/fragment_flat_tv_address"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"

                android:textColor="@color/black"
                android:fontFamily="@font/roboto_regular"
                android:textSize="16sp"
                tools:text="м. Филатов луг, ул. Черемушкина, д.8"
                android:ellipsize="start"

                app:layout_constraintTop_toBottomOf="@id/item_object_tv_unused_address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"

                android:textSize="18sp"
                android:textColor="@color/samolet_grey"
                android:fontFamily="@font/roboto_medium"

                android:text="@string/clean_r"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fragment_flat_rv_clean"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"

                android:textSize="18sp"
                android:textColor="@color/samolet_grey"
                android:fontFamily="@font/roboto_medium"

                android:text="@string/rough_r"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fragment_flat_rv_rough"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"

                android:textSize="18sp"
                android:textColor="@color/samolet_grey"
                android:fontFamily="@font/roboto_medium"

                android:text="@string/other"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fragment_flat_rv_other"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>