<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.building.BuildingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/fragment_building_iv_arrow_back"

            android:layout_width="20dp"
            android:layout_height="40dp"

            android:layout_marginStart="20dp"

            android:src="@drawable/ic_arrow_back"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/tasks_of_building"

            android:textColor="@color/samolet_primary"
            android:textSize="24sp"
            android:fontFamily="@font/roboto_medium"

            android:layout_marginStart="20dp"

            app:layout_constraintBottom_toBottomOf="@id/fragment_building_iv_arrow_back"
            app:layout_constraintTop_toTopOf="@id/fragment_building_iv_arrow_back"
            app:layout_constraintStart_toEndOf="@id/fragment_building_iv_arrow_back" />

        <TextView
            android:id="@+id/fragment_building_tv_num_of_task"

            android:layout_width="32dp"
            android:layout_height="25dp"

            android:gravity="center"
            tools:text="1"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_bold"
            android:maxLines="1"

            android:background="@drawable/ic_house"

            android:layout_marginEnd="20dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"

        android:textSize="18sp"
        android:textColor="@color/samolet_grey"
        android:fontFamily="@font/roboto_medium"


        android:text="@string/progress_sections"/>

    <ProgressBar
        android:id="@+id/fragment_building_pb_counting"

        android:layout_width="match_parent"
        android:layout_height="8dp"

        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"

        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:progressDrawable="@drawable/progress_bar_for_main_page_counting" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"

        android:textSize="18sp"
        android:textColor="@color/samolet_grey"
        android:fontFamily="@font/roboto_medium"


        android:text="@string/address_without_dots"/>

    <TextView
        android:id="@+id/fragment_building_tv_address"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"

        android:textColor="@color/black"
        android:fontFamily="@font/roboto_regular"
        android:textSize="16sp"
        tools:text="м. Филатов луг, ул. Черемушкина, д.8"
        android:ellipsize="start"

        app:layout_constraintTop_toBottomOf="@id/item_object_tv_unused_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"

        android:textSize="18sp"
        android:textColor="@color/samolet_grey"
        android:fontFamily="@font/roboto_medium"


        android:text="@string/sections"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_building_rv_sections"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:paddingEnd="20dp"
        android:clipToPadding="false"

        android:layout_marginTop="5dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_building_rv_floors"

        android:layout_marginTop="20dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>